chore: checkpoint before xique schedule import implementation
